--- a/menu.html
+++ b/menu.html
@@ -530,7 +530,7 @@
                                 <div class="card-section">
                                     <img src="assets/img/prod/Anicetti_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Biscotti all'anice">
                                     <h3>Anicetti<span class="price ">4,5</span></h3>
-                                    <p>Cinque biscotti secchi all'anice.<span class=""><br><small>Allergeni: Glutine, Anidride solforosa e solfiti</small></span></p>
+                                    <p>Biscotti secchi all'anice (5 pezzi).<span class=""><br><small>Allergeni: Glutine, Anidride solforosa e solfiti</small></span></p>
                                 </div>
                             </div>
                         </div>
