--- a/asporto.html
+++ b/asporto.html
@@ -131,7 +131,7 @@
     				</section>
     				<section class="grid-x grid-margin-x grid-margin-y" id="hamburger" data-magellan-target="hamburger">
     					<div class="small-12 cell">
-    						<h2>Hamburger <span style="display:none;">Classici</span><small style="line-height: 40px;">Serviti a cottura media e con patate fritte</small></h2>
+    						<h2>Hamburger <span style="display:none;">Classici</span><small style="line-height: 40px;">Serviti a cottura media e con patate fritte<br>&#200; possibile sostituire il manzo con pollo ben cotto</small></h2>
     						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y">
     						</div>
     					</div>
