--- a/menu.html
+++ b/menu.html
@@ -762,14 +762,14 @@
     							</div>
     						</div>
     					</div>
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Blanche 33cl<span class="price ">5,5</span></h3>
     								<p class="">Birrificio Cornelissen. Blanche Belga 5%. Il frumento conferisce alla birra un sapore leggermente amaro, il coriandolo un tocco piccante, la buccia di limone il fruttato.<span class=""><br><small>Allergeni: Glutine</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -1016,7 +1016,7 @@
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
-    								<h3>Grappa Bianca<span class="price ">3,5</span></h3>
+    								<h3>Grappa Bianca<span class="price ">4</span></h3>
     								<p class="">Bonaventura Maschio 903.<span class="hide"><br><small>Allergeni: </small></span></p>
     							</div>
     						</div>
