--- a/menu.html
+++ b/menu.html
@@ -693,14 +693,14 @@
     							</div>
     						</div>
     					</div>
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Italicum<span class="price ">4 | 6 | 12</span></h3>
     								<p class="">Bionda fruttata senza Glutine 5,0%. Birrificio dei Castelli.<span class=""><br><small>Allergeni: --</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
