--- a/menu.html
+++ b/menu.html
@@ -436,7 +436,7 @@
     								<p>250 grammi circa di tenerissima Entrecôte (controfiletto) di manzetta Red Hereford irlandese. Servita con insalata.<span class=""><br><small>Allergeni: --</small></span></p>
     							</div>
     						</div>
-    					</div> --€
+    					</div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
