--- a/menu.html
+++ b/menu.html
@@ -81,37 +81,6 @@
     </div>
     <div id="menupage-text">
     	<div class="grid-container">
-            <!-- <section class="grid-x grid-margin-x grid-margin-y" id="aperitivo" data-magellan-target="aperitivo">
-                <div class="small-12 cell callout secondary">
-                    <h2>Aperitivo</h2>
-                    <div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
-                        <div class="cell">
-                            <div class="card">
-                                <div class="card-section">
-                                    <h3>Aperitivo di Fritti<span class="price ">15</span></h3>
-                                    <ul class="bullet">
-                                        <li>4 olive all'ascolana, 4 bocconcini di pollo, 4 falafel, cipolle in tempura.</li>
-                                        <li>Scelta fra: calice di vino, birra artigianale media o spritz.</li>
-                                    </ul>
-                                    <p><small>Allergeni: Glutine, Uova, Latte, Crostacei, Sedano, Senape, Anidride solforosa e solfiti</small></p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="cell">
-                            <div class="card">
-                                <div class="card-section">
-                                    <h3>Aperitivo Slider<span class="price ">15</span></h3>
-                                    <ul class="bullet">
-                                        <li>3 slider da 50 grammi ciascuno selezionati dal cuoco.</li>
-                                        <li>Scelta fra: calice di vino, birra artigianale media o spritz.</li>
-                                    </ul>
-                                    <p><small>Allergeni: Glutine, Uova, Latte, Crostacei, Sedano, Senape, Anidride solforosa e solfiti</small></p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section> -->
     		<section class="grid-x grid-margin-x grid-margin-y" id="perStuzzicare" data-magellan-target="perStuzzicare">
     			<div class="small-12 cell">
     				<h2>Per Stuzzicare</h2>
@@ -258,33 +227,6 @@
     							</div>
     						</div>
     					</div>
-    					<!-- <div class="cell">
-    						<div class="card">
-    							<div class="card-section">
-    								<img src="assets/img/prod/Autunno_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Autunno">
-    								<h3>Autunno<span class="price ">Singolo 13,4 | Doppio 17,9</span></h3>
-    								<p>Burger di manzo, scamorza affumicata, speck croccante, crema di funghi.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
-    							</div>
-    						</div>
-    					</div> -->
-    					<!-- <div class="cell">
-    						<div class="card">
-    							<div class="card-section">
-    								<img src="assets/img/prod/Inverno_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Inverno">
-    								<h3>Inverno<span class="price ">Singolo 13,4 | Doppio 17,9</span></h3>
-    								<p>Burger di manzo, pecorino vallesina, speck croccante, erbe di campo strascinate<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
-    							</div>
-    						</div>
-    					</div> -->
-    					<!-- <div class="cell">
-    						<div class="card">
-    							<div class="card-section">
-    								<img src="assets/img/prod/Primavera_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Primavera">
-    								<h3>Primavera<span class="price ">Singolo 12,9 | Doppio 16,9</span></h3>
-    								<p>Burger di manzo, composta di feta, pomodorini e timo; insalata.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
-    							</div>
-    						</div>
-    					</div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -297,45 +239,9 @@
     					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
-    								<img src="assets/img/prod/Norma_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Norma">
-    								<h3>Norma<span class="price ">Singolo 13,4 | Doppio 17,9</span></h3>
-    								<p>Burger di manzo, crema di melanzane e basilico, pomodori confit, ricotta salata.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
-    							</div>
-    						</div>
-    					</div> -->
-    					<!-- <div class="cell">
-    						<div class="card">
-    							<div class="card-section">
-    								<img src="assets/img/prod/Deciso_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Deciso">
-    								<h3>Deciso<span class="price ">Singolo 13,4 | Doppio 17,9</span></h3>
-    								<p>Burger di manzo (180 grammi), gorgonzola, guanciale, pomodori confit<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
-    							</div>
-    						</div>
-    					</div> -->
-    					<!-- <div class="cell">
-    						<div class="card">
-    							<div class="card-section">
     								<img src="assets/img/prod/FaveePecorino_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Fave e Pecorino">
     								<h3>Fave e Pecorino<span class="price ">Singolo 13,4 | Doppio 17,9</span></h3>
     								<p>Burger di manzo, pecorino vallesina, guanciale, fave in porchetta.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
-    							</div>
-    						</div>
-    					</div> -->
-    					<!-- <div class="cell">
-    						<div class="card">
-    							<div class="card-section">
-    								<img src="assets/img/prod/Mantovano_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Mantovano">
-    								<h3>Mantovano<span class="price ">Singolo 12,9 | Doppio 16,9</span></h3>
-    								<p>Burger di manzo, gorgonzola, speck croccante, crema di zucca, amaretto.<span class=""><br><small>Allergeni: Glutine, Uova, Latte, Frutta a Guscio</small></span></p>
-    							</div>
-    						</div>
-    					</div> -->
-    					<!-- <div class="cell">
-    						<div class="card">
-    							<div class="card-section">
-    								<img src="assets/img/prod/Pollo_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Pollo">
-    								<h3>Pollo<span class="price ">Singolo 12,9 | Doppio 16,9</span></h3>
-    								<p>Burger di petto di pollo, fontina, cipolla caramellata, rucola, salsa allo yogurt.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
     					</div> -->
@@ -551,14 +457,6 @@
     			<div class="small-12 cell">
     				<h2>Bevande</h2>
     				<div class="grid-x small-up-2 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
-    					<!-- <div class="cell">
-    						<div class="card">
-    							<div class="card-section">
-    								<h3>Acqua<span class="price ">1 | 1,5</span></h3>
-    								<p class="">Mezzo Litro / Litro.<span class="hide"><br><small>Allergeni: </small></span></p>
-    							</div>
-    						</div>
-    					</div> -->
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
@@ -677,14 +575,6 @@
     							</div>
     						</div>
     					</div>
-                        <!-- <div class="cell">
-                            <div class="card">
-                                <div class="card-section">
-                                    <h3>Pils<span class="price ">4 | 6 | 12</span></h3>
-                                    <p class="">Bionda tedesca con forte nota amara 4,9%. Birrificio Ganter.<span class=""><br><small>Allergeni: Glutine</small></span></p>
-                                </div>
-                            </div>
-                        </div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -693,7 +583,7 @@
     							</div>
     						</div>
     					</div>
-    				<div class="cell">
+    				    <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Italicum<span class="price ">4 | 6 | 12</span></h3>
@@ -770,14 +660,14 @@
     							</div>
     						</div>
     					</div> -->
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Natural Radler 50cl<span class="price ">6</span></h3>
     								<p class="">Birrificio Mönchshof. Radler 2,5%. Rinfrescante e fruttata con succo di limone naturale.<span class=""><br><small>Allergeni: Glutine</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -786,14 +676,14 @@
     							</div>
     						</div>
     					</div>
-    				<!-- <div class="cell">
+    				    <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Zona Mugnetti 50cl<span class="price ">6,5</span></h3>
     								<p class="">Birrificio Mukkeller. Belgian Ale 6%. Colore arancio chiaro, gusto morbido con sentori di arance e limoni.<span class=""><br><small>Allergeni: Glutine</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -1009,7 +899,7 @@
     						<div class="card">
     							<div class="card-section">
     								<h3>Amari<span class="price ">4</span></h3>
-    								<p class="">Sibilla, Amaro dell&#x27;Erborista, Varnelli, Amaro del Capo, Sambuca Molinari, Fernet Branca, Brancamenta, Montenegro, Anima Nera.<span class="hide"><br><small>Allergeni: </small></span></p>
+    								<p class="">Sibilla, Amaro dell&#x27;Erborista, Varnelli, Amaro del Capo, Sambuca Molinari, Fernet Branca, Montenegro, Anima Nera.<span class="hide"><br><small>Allergeni: </small></span></p>
     							</div>
     						</div>
     					</div>
