--- a/menu.html
+++ b/menu.html
@@ -343,7 +343,7 @@
     							</div>
     						</div>
     					</div> 
-    					<!-- <div class="cell">
+    				 <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/Fish&amp;Chips_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Fish &amp; Chips">
@@ -351,7 +351,7 @@
     								<p>Filetti di merluzzo panati e patate fritte. Serviti con salsa aioli.<span class=""><br><small>Allergeni: Glutine, Uova, Pesce</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div> 
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
