--- a/menu.html
+++ b/menu.html
@@ -660,14 +660,14 @@
     							</div>
     						</div>
     					</div> -->
-    					<!-- <div class="cell">
+    					<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Natural Radler 50cl<span class="price ">6</span></h3>
     								<p class="">Birrificio Mönchshof. Radler 2,5%. Rinfrescante e fruttata con succo di limone naturale.<span class=""><br><small>Allergeni: Glutine</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
