--- a/menu.html
+++ b/menu.html
@@ -856,14 +856,14 @@
     							</div>
     						</div>
     					</div>
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Rosato igt biologico - Centovie<span class="price ">18 | 4</span></h3>
     								<p class="">Cantina Umani Ronchi. Colore rosa quarzo. Al naso profuma di giacinto e di rosa, di lampone e melograno, di rosmarino e caramella di liquirizia. In bocca ha acidità agrumata, è vivo e sapido.<span class=""><br><small>Allergeni: Anidride solforosa e solfiti</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
