--- a/menu.html
+++ b/menu.html
@@ -684,14 +684,14 @@
     							</div>
     						</div>
     					</div>
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Bockbier 50cl<span class="price ">6,5</span></h3>
     								<p class="">Birrificio Mönchshof. Rossa tedesca 6,9%. Birra corposa, si fa apprezzare grazie al suo bouquet leggermente maltato, alla sua schiuma cremosa e al suo gusto speziato e aromatico.<span class=""><br><small>Allergeni: Glutine</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
