--- a/menu.html
+++ b/menu.html
@@ -636,14 +636,14 @@
     							</div>
     						</div>
     					</div>
-    					<!-- <div class="cell">
+    				 <div class="cell">
     						<div class="card">
     							<div class="card-section">
-    								<h3>Pilsner 50cl<span class="price ">6</span></h3>
-    								<p class="">Birrificio Flensburger. Pils tedesca 4,8%. Gusto amaro e profumo di malto e luppolo. Finale secco ed amaro che rinfresca il palato.<span class=""><br><small>Allergeni: Glutine</small></span></p>
+    								<h3>Pils 50cl<span class="price ">6</span></h3>
+    								<p class="">Birrific Monchshof. Pils tedesca 4,9%. Gusto amaro e profumo di malto e luppolo. Finale secco ed amaro che rinfresca il palato.<span class=""><br><small>Allergeni: Glutine</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div> 
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -684,14 +684,14 @@
     							</div>
     						</div>
     					</div>
-    					<!-- <div class="cell">
+    				<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Bockbier 50cl<span class="price ">6,5</span></h3>
     								<p class="">Birrificio Mönchshof. Rossa tedesca 6,9%. Birra corposa, si fa apprezzare grazie al suo bouquet leggermente maltato, alla sua schiuma cremosa e al suo gusto speziato e aromatico.<span class=""><br><small>Allergeni: Glutine</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div> 
     					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
