--- a/menu.html
+++ b/menu.html
@@ -640,7 +640,7 @@
     						<div class="card">
     							<div class="card-section">
     								<h3>Pils 50cl<span class="price ">6</span></h3>
-    								<p class="">Birrific Monchshof. Pils tedesca 4,9%. Gusto amaro e profumo di malto e luppolo. Finale secco ed amaro che rinfresca il palato.<span class=""><br><small>Allergeni: Glutine</small></span></p>
+    								<p class="">Birrificio Monchshof. Pils tedesca 4,9%. Gusto amaro e profumo di malto e luppolo. Finale secco ed amaro che rinfresca il palato.<span class=""><br><small>Allergeni: Glutine</small></span></p>
     							</div>
     						</div>
     					</div> 
