--- a/menu.html
+++ b/menu.html
@@ -636,11 +636,11 @@
     							</div>
     						</div>
     					</div>
-    				 <div class="cell">
+    				    <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Pils 50cl<span class="price ">6</span></h3>
-    								<p class="">Birrificio Monchshof. Pils tedesca 4,9%. Gusto amaro e profumo di malto e luppolo. Finale secco ed amaro che rinfresca il palato.<span class=""><br><small>Allergeni: Glutine</small></span></p>
+    								<p class="">Birrificio Mönchshof. Pils tedesca 4,9%. Gusto amaro e profumo di malto e luppolo. Finale secco ed amaro che rinfresca il palato.<span class=""><br><small>Allergeni: Glutine</small></span></p>
     							</div>
     						</div>
     					</div> 
@@ -684,7 +684,7 @@
     							</div>
     						</div>
     					</div>
-    				<div class="cell">
+    				    <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Bockbier 50cl<span class="price ">6,5</span></h3>
