--- a/menu.html
+++ b/menu.html
@@ -712,7 +712,7 @@
                             <div class="card">
                                 <div class="card-section">
                                     <h3>Tulio 50cl<span class="price ">6,5</span></h3>
-                                    <p class="">Rye IPA 6,5%. Birrificio Mukkeller.<span class=""><br><small>Allergeni: Glutine</small></span></p>
+                                    <p class="">Birrificio Mukkeller. Rye IPA 6,5%. Colore dorato intenso. Luppolatura generosa che si fonde alla perfezione con i malti d'orzo e di segale.<span class=""><br><small>Allergeni: Glutine</small></span></p>
                                 </div>
                             </div>
                         </div>
