--- a/menu.html
+++ b/menu.html
@@ -334,7 +334,7 @@
     			<div class="small-12 cell">
     				<h2>Secondi</h2>
     				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
-    				    <div class="cell">
+    				   <!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/Entrecote_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Entrecôte">
@@ -342,7 +342,7 @@
     								<p>250 grammi circa di tenerissima Entrecôte (controfiletto) di manzetta Red Hereford irlandese. Servita con insalata.<span class=""><br><small>Allergeni: --</small></span></p>
     							</div>
     						</div>
-    					</div> 
+    					</div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
