--- a/menu.html
+++ b/menu.html
@@ -85,7 +85,7 @@
     			<div class="small-12 cell">
     				<h2>Per Stuzzicare</h2>
     				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
-    				    <!-- <div class="cell">
+    				    <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/BocconcinidiPollo_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Bocconcini di Pollo">
@@ -93,7 +93,7 @@
     								<p>Bocconcini di petto di pollo. Serviti con salsa piccante fatta in casa (10 pezzi).<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
-    					</div>  -->
+    					</div> 
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
@@ -148,7 +148,7 @@
     							</div>
     						</div>
     					</div> -->
-    					<!-- <div class="cell">
+    					<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/AlettediPollo_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Alette di Pollo">
@@ -156,7 +156,7 @@
     								<p>Leggermente piccanti o piccanti (4 pezzi).<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
