--- a/menu.html
+++ b/menu.html
@@ -899,7 +899,7 @@
     						<div class="card">
     							<div class="card-section">
     								<h3>Amari<span class="price ">4</span></h3>
-    								<p class="">Sibilla, Amaro dell&#x27;Erborista, Varnelli, Amaro del Capo, Sambuca Molinari, Fernet Branca, Montenegro, Anima Nera.<span class="hide"><br><small>Allergeni: </small></span></p>
+    								<p class="">Sibilla, Amaro dell&#x27;Erborista, Varnelli, Amaro del Capo, Sambuca Molinari, Fernet Branca, Montenegro.<span class="hide"><br><small>Allergeni: </small></span></p>
     							</div>
     						</div>
     					</div>
@@ -976,14 +976,14 @@
     							</div>
     						</div>
     					</div>
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Gin Tonic Ginpilz<span class="price ">8</span></h3>
     								<p class="">Gin con chiaro profumo e sapore di ginepro. Servito con acqua tonica premium.<span class="hide"><br><small>Allergeni: </small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
