--- a/consulta.html
+++ b/consulta.html
@@ -78,7 +78,7 @@
                             <li><strong>Numero persone: </strong><span id="people"></span></li>
                             <br>
                             <li><strong>Note: </strong><span id="note"></span></li>
-                            <li><strong>Seggioloni aggiunti: </strong><span id="segg"></span></li>
+                            <li><strong>Seggioloni: </strong><span id="segg"></span></li>
                             <li><strong>Ho un cane o più: </strong><span id="dog"></span></li>
                         </ul>
                     </fieldset>
