--- a/menu.html
+++ b/menu.html
@@ -748,14 +748,14 @@
     							</div>
     						</div>
     					</div>
-    					<!-- <div class="cell">
+    				<div class="cell">
     						<div class="card">
     							<div class="card-section">
-    								<h3>Black Stout 50cl<span class="price ">6,5</span></h3>
-    								<p class="">Birrificio Brewmaster. Stout irlandese 4,2%. Stout dal gusto deciso, cremoso e delicato.<span class=""><br><small>Allergeni: Glutine</small></span></p>
+    								<h3>cozzamara 50cl<span class="price ">6,5</span></h3>
+    								<p class="">Birrificio Mukkeller    <span class=""><br><small>Allergeni: Glutine</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div> 
     				</div>
     			</div>
     		</section>
