--- a/menu.html
+++ b/menu.html
@@ -751,7 +751,7 @@
     				<div class="cell">
     						<div class="card">
     							<div class="card-section">
-    								<h3>cozzamara 50cl<span class="price ">6,5</span></h3>
+    								<h3>Cozzamara 50cl<span class="price ">6,5</span></h3>
     								<p class="">Birrificio Mukkeller    <span class=""><br><small>Allergeni: Glutine</small></span></p>
     							</div>
     						</div>
@@ -976,14 +976,14 @@
     							</div>
     						</div>
     					</div>
-    					<!-- <div class="cell">
+    				 <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Gin Tonic Ginpilz<span class="price ">8</span></h3>
     								<p class="">Gin con chiaro profumo e sapore di ginepro. Servito con acqua tonica premium.<span class="hide"><br><small>Allergeni: </small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div> 
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
