--- a/menu.html
+++ b/menu.html
@@ -748,11 +748,11 @@
     							</div>
     						</div>
     					</div>
-    				<div class="cell">
+    				    <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Cozzamara 50cl<span class="price ">6,5</span></h3>
-    								<p class="">Birrificio Mukkeller    <span class=""><br><small>Allergeni: Glutine</small></span></p>
+    								<p class="">Birrificio Mukkeller. Schwarzbier 4,9%. Birra scura dal carattere elegante. In bocca si presenta secca, il gusto dei malti tostati conferiscono sapori delicati di cacao e caffè senza eccedere. Amaro leggero.<span class=""><br><small>Allergeni: Glutine</small></span></p>
     							</div>
     						</div>
     					</div> 
