--- a/menu.html
+++ b/menu.html
@@ -872,6 +872,14 @@
     							</div>
     						</div>
     					</div>
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <h3>Franciacorta docg - Maria Luisa Santus<span class="price ">31</span></h3>
+                                    <p class="">Cantina Maria Luisa Santus. Brut dall’aroma suadente e delicato in partenza, per poi svilupparsi in un ventaglio corposo con note di cedro, papaya e miele. Intrigante sensazione cremosa, data dal perlage, con un sapore elegante e di grande finezza.<span class=""><br><small>Allergeni: Anidride solforosa e solfiti</small></span></p>
+                                </div>
+                            </div>
+                        </div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
