--- a/riserva-un-tavolo.html
+++ b/riserva-un-tavolo.html
@@ -126,7 +126,7 @@
                 <div class="grid-x grid-margin-x">
                     <div class="small-12 cell">
                         <p>Includi in <strong>Quante persone*</strong> anche eventuali seggioloni. Esempio: 4 persone e 2 seggioloni, seleziona 6.</p>
-                        <p>Non accettiamo alcun prodotto dall'esterno, inclusi torte, vini e bevande.</p>
+                        <p>Non accettiamo alcun prodotto dall'esterno, compresi torte, vini e bevande.</p>
                         <p><strong>* </strong> Indica un campo obbligatorio.</p>
                     </div>
                     <div class="small-12 cell"><hr></div>
