--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -99,7 +99,7 @@
     					<li class="accordion-item" data-accordion-item>
     					  	<a href="#torteFaq" class="accordion-title">Posso portare una torta da casa?</a>
     					  	<div class="accordion-content" data-tab-content id="torteFaq">
-    						  	<p>Non accettiamo torte anche se di pasticceria<strong> e non possiamo neppure tenerle in frigo o freezer nel caso le portiate per errore</strong>. Più in generale, non accettiamo alcun prodotto dall'esterno inclusi vini e bevande.</p>
+    						  	<p>Non accettiamo torte anche se di pasticceria<strong> e non possiamo neppure tenerle in frigo o freezer nel caso le portiate per errore</strong>. Più in generale, non accettiamo alcun prodotto dall'esterno, compresi vini e bevande.</p>
     						  	Se per una ricorrenza gradite una torta:
     						  	<ul class="bullet">
     								<li>Possiamo farvi uno dei nostri dolci a torta con almeno 2 giorni di preavviso.</li>
