--- a/menu.html
+++ b/menu.html
@@ -607,14 +607,14 @@
     							</div>
     						</div>
     					</div>
-                        <div class="cell">
+                        <!-- <div class="cell">
                             <div class="card">
                                 <div class="card-section">
                                     <h3>Hattori Hanzo<span class="price ">4 | 6,5 | 13</span></h3>
                                     <p class="">Doppia IPA 8,2%. Birrificio Mukkeller.<span class=""><br><small>Allergeni: Glutine</small></span></p>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
     					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
