--- a/menu.html
+++ b/menu.html
@@ -245,7 +245,7 @@
     							</div>
     						</div>
     					</div> -->
-    					<!-- <div class="cell">
+    				 <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/PolloCroccante_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Pollo Croccante">
@@ -253,7 +253,7 @@
     								<p>Cotoletta di petto di pollo super croccante e succosissima all&#x27;interno con panatura leggermente speziata, bacon croccante, cipolla in agrodolce, insalata, maionese, pane ciabatta.<span class=""><br><small>Allergeni: Glutine, Uova, Soia, Latte</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -443,7 +443,7 @@
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
-                                    <img src="assets/img/prod/Anicetti_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Biscotti all'anice">
+                                    <img src="" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Biscotti all'anice">
                                     <h3>Xyris - Vino da dolce<span class="price ">3,5</span></h3>
                                     <p>Cantina Marotti Campi. Fermentato di mosto a bassa gradazione 6,5%. Ottimo con dolci secchi e come cordiale leggero di fine cena.<span class=""><br><small>Allergeni: Anidride solforosa e solfiti</small></span></p>
                                 </div>
