--- a/menu.html
+++ b/menu.html
@@ -443,7 +443,7 @@
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
-                                    <img src="" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Biscotti all'anice">
+                                    <img src="" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Xyris - Vino da dolce">
                                     <h3>Xyris - Vino da dolce<span class="price ">3,5</span></h3>
                                     <p>Cantina Marotti Campi. Fermentato di mosto a bassa gradazione 6,5%. Ottimo con dolci secchi e come cordiale leggero di fine cena.<span class=""><br><small>Allergeni: Anidride solforosa e solfiti</small></span></p>
                                 </div>
