--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -390,13 +390,13 @@
     			<div class="cell">
     				<h1 class="subheader">Orari</h1>
     				<ul class="orari-footer-schedule no-bullet">
-    					<li><span>Lunedì:</span><time>19 - 23</time></li>
-    					<li><span>Martedì:</span><time>19 - 23</time></li>
-    					<li><span>Mercoledì:</span><time>19 - 23</time></li>
-    					<li><span>Giovedì:</span><time>19 - 23</time></li>
-    					<li><span>Venerdì:</span><time>19 - 23</time></li>
+    					<li><span>Lunedì:</span><time>Chiuso</time></li>
+    					<li><span>Martedì:</span><time>Chiuso</time></li>
+    					<li><span>Mercoledì:</span><time>19 - 22</time></li>
+    					<li><span>Giovedì:</span><time>19 - 22</time></li>
+    					<li><span>Venerdì:</span><time>19 - 22</time></li>
     					<li><span>Sabato:</span><time>19 - 23</time></li>
-    					<li><span>Domenica:</span><time>19 - 23</time></li>
+    					<li><span>Domenica:</span><time>19 - 22</time></li>
     				</ul>
     			</div>
     			<div class="cell">
