--- a/torte-ricorrenze.html
+++ b/torte-ricorrenze.html
@@ -85,14 +85,14 @@
         							</div>
         						</div>
         					</div>
-                            <!-- div class="cell">
+                            <div class="cell">
                                 <div class="card">
                                     <div class="card-section">
                                         <h3>Birramisù<span class="price ">4&thinsp;€ a porzione (min. 4 porzioni)</span></h3>
                                         <p>Tiramisù con savoiardi inzuppati nella birra stout. Avvolgente e cremoso.</p>
                                     </div>
                                 </div>
-                            </div> -->
+                            </div>
                         </div>
         			</div>
         			<div class="small-12 cell">
@@ -259,13 +259,13 @@
     			<div class="cell">
     				<h1 class="subheader">Orari</h1>
     				<ul class="orari-footer-schedule no-bullet">
-    					<li><span>Lunedì:</span><time>19 - 23</time></li>
-    					<li><span>Martedì:</span><time>19 - 23</time></li>
-    					<li><span>Mercoledì:</span><time>19 - 23</time></li>
-    					<li><span>Giovedì:</span><time>19 - 23</time></li>
-    					<li><span>Venerdì:</span><time>19 - 23</time></li>
+    					<li><span>Lunedì:</span><time>Chiuso</time></li>
+    					<li><span>Martedì:</span><time>Chiuso</time></li>
+    					<li><span>Mercoledì:</span><time>19 - 22</time></li>
+    					<li><span>Giovedì:</span><time>19 - 22</time></li>
+    					<li><span>Venerdì:</span><time>19 - 22</time></li>
     					<li><span>Sabato:</span><time>19 - 23</time></li>
-    					<li><span>Domenica:</span><time>19 - 23</time></li>
+    					<li><span>Domenica:</span><time>19 - 22</time></li>
     				</ul>
     			</div>
     			<div class="cell">
