--- a/torte-ricorrenze.html
+++ b/torte-ricorrenze.html
@@ -107,13 +107,13 @@
         						</div>
         					</div>
         					<div class="cell">
-        						<div class="card">
-        							<div class="card-section">
-        								<h3>Pistacchio e Amarene<span class="price ">4,5&thinsp;€ a porzione (min. 6 porzioni)</span></h3>
-        								<p>Base di financier con pezzi di amarena ricoperta da: croccantino al pistacchio, mousse al pistacchio con un cuore di gel di amarena.</p>
-        							</div>
-        						</div>
-        					</div>
+                                <div class="card">
+                                    <div class="card-section">
+                                        <h3>Pistacchio e Frutti di bosco<span class="price ">4,5&thinsp;€ a porzione (min. 6 porzioni)</span></h3>
+                                        <p>Base di financier con pezzi di frutti di bosco ricoperta da: croccantino al pistacchio, mousse al pistacchio e frutti di bosco.</p>
+                                    </div>
+                                </div>
+                            </div>
         					<div class="cell">
         						<div class="card">
         							<div class="card-section">
