--- a/riserva-un-tavolo.html
+++ b/riserva-un-tavolo.html
@@ -124,7 +124,13 @@
         <div class="grid-container">
             <form id="form" novalidate="novalidate" autocomplete="on">
                 <div class="grid-x grid-margin-x">
+                    <div class="small-12 cell callout primary"> 
+                        <p><strong>Domenica 21 Settembre dalle ore 17.00:</strong><br>Festa di Fine Estate con concerto dei The Cadillacs.</p>
+                        <p>Non accettiamo prenotazioni.</p>
+                        <a href="assets/img//documenti/FestaFineEstate.pdf" target="_blank" rel="noopener">Scarica locandina e menù della festa</a>
+                    </div>
                     <div class="small-12 cell">
+                        
                         <p>Includi in <strong>Quante persone*</strong> anche eventuali seggioloni. Esempio: 4 persone e 2 seggioloni, seleziona 6.</p>
                         <p>Non accettiamo alcun prodotto dall'esterno, compresi torte, vini e bevande.</p>
                         <p><strong>* </strong> Indica un campo obbligatorio.</p>
