--- a/riserva-un-tavolo.html
+++ b/riserva-un-tavolo.html
@@ -127,7 +127,7 @@
                     <div class="small-12 cell callout primary"> 
                         <p><strong>Domenica 21 Settembre dalle ore 17.00:</strong><br>Festa di Fine Estate con concerto dei The Cadillacs.</p>
                         <p>Non accettiamo prenotazioni.</p>
-                        <a href="assets/img//documenti/FestaFineEstate.pdf" target="_blank" rel="noopener">Scarica locandina e menù della festa</a>
+                        <a class="button" href="assets/img//documenti/FestaFineEstate.pdf" target="_blank" rel="noopener">Scarica locandina e menù della festa</a>
                     </div>
                     <div class="small-12 cell">
                         
