--- a/menu.html
+++ b/menu.html
@@ -607,14 +607,14 @@
     							</div>
     						</div>
     					</div>
-                        <!-- <div class="cell">
+                        <div class="cell">
                             <div class="card">
                                 <div class="card-section">
                                     <h3>Hattori Hanzo<span class="price ">4 | 6,5 | 13</span></h3>
                                     <p class="">Doppia IPA 8,2%. Birrificio Mukkeller.<span class=""><br><small>Allergeni: Glutine</small></span></p>
                                 </div>
                             </div>
-                        </div> -->
+                        </div>
     					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -700,14 +700,14 @@
     							</div>
     						</div>
     					</div> -->
-                        <!-- <div class="cell">
+                        <div class="cell">
                             <div class="card">
                                 <div class="card-section">
                                     <h3>Marina 50cl<span class="price ">6,5</span></h3>
                                     <p class="">Birrificio Mukkeller. American Pale Ale 6,4%. Birra ambrata, luppolata, decisa e complessa. L'abbondante luppolo dona profumi e sapori esotici e un amaro persistente.<span class=""><br><small>Allergeni: Glutine</small></span></p>
                                 </div>
                             </div>
-                        </div> -->
+                        </div>
                         <!-- <div class="cell">
                             <div class="card">
                                 <div class="card-section">
@@ -732,14 +732,14 @@
                                 </div>
                             </div>
                         </div> -->
-    					<!-- <div class="cell">
+    					<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Hattori Hanzo 50cl<span class="price ">6,5</span></h3>
     								<p class="">Birrificio Mukkeller. Doppia IPA 8,2%. Birra bionda dall&#x27;amaro pulito e persistente. Crea dipendenza.<span class=""><br><small>Allergeni: Glutine</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
