--- a/index.html
+++ b/index.html
@@ -70,7 +70,12 @@
     				<h1 class="first-paragraph">Orari</h1>
     			</div>
     		</div>
-    		<div class="grid-x grid-margin-x grid-margin-y">
+            <div class="small-12 cell callout primary"> 
+                <p><strong>Domenica 21 Settembre dalle ore 17.00:</strong><br>Festa di Fine Estate con concerto dei The Cadillacs.</p>
+                <p>Non accettiamo prenotazioni.</p>
+                <a class="button" href="assets/img//documenti/FestaFineEstate.pdf" target="_blank" rel="noopener">Scarica locandina e menù della festa</a>
+            </div>
+    		<!-- <div class="grid-x grid-margin-x grid-margin-y">
     			<div class="small-12 medium-6 cell">
     				<h2>Ristorante</h2>
     				<ul class="orari-schedule no-bullet">
@@ -99,7 +104,7 @@
     				</ul>
     				<span class="extra-space"><a href="asporto.html" class="button left">Ordina da Asporto</a></span>
     			</div>
-    		</div>
+    		</div> -->
     	</div>
     </div>
     <div class="panel-home-n">
