--- a/menu.html
+++ b/menu.html
@@ -216,7 +216,7 @@
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
-                                    <p>Acqua liscia 50cl<span class="price ">1,5€</span></p>
+                                    <p>Acqua 50cl<span class="price ">1,5€</span></p>
                                 </div>
                             </div>
                         </div>
