--- a/asporto.html
+++ b/asporto.html
@@ -58,11 +58,11 @@
     			<h1 class="first-paragraph">Ordina da Asporto</h1>
     			<p -hidden>Chiusi il lunedì e martedì.</p>
     		</div>
-            <div class="small-12 cell callout primary"> 
-                        <p><strong>Domenica 21 Settembre dalle ore 17.00:</strong><br>Festa di Fine Estate con concerto dei The Cadillacs.</p>
-                        <p>Non facciamo asporti.</p>
-                        <a class="button" href="assets/img//documenti/FestaFineEstate.pdf" target="_blank" rel="noopener">Scarica locandina e menù della festa</a>
-                    </div>
+            <!-- <div class="small-12 cell callout primary"> 
+                <p><strong>Domenica 21 Settembre dalle ore 17.00:</strong><br>Festa di Fine Estate con concerto dei The Cadillacs.</p>
+                <p>Non facciamo asporti.</p>
+                <a class="button" href="assets/img//documenti/FestaFineEstate.pdf" target="_blank" rel="noopener">Scarica locandina e menù della festa</a>
+            </div> -->
     	</div>
     	<div class="grid-x grid-margin-x">
     		<div class="small-12 medium-7 large-5 xxlarge-4 cell" hidden>
