--- a/menu.html
+++ b/menu.html
@@ -227,7 +227,16 @@
     							</div>
     						</div>
     					</div>
-    					<div class="cell">
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <img src="assets/img/prod/Autunno_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Autunno">
+                                    <h3>Autunno<span class="price ">Singolo 13,4 | Doppio 17,9</span></h3>
+                                    <p>Burger di manzo, scamorza affumicata, speck croccante, crema di funghi.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+                                </div>
+                            </div>
+                        </div>
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/Estivo_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Estivo">
@@ -235,7 +244,7 @@
     								<p>Burger di manzo, mozzarella fiordilatte, pomodoro fresco, maionese al basilico.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
