--- a/torte-ricorrenze.html
+++ b/torte-ricorrenze.html
@@ -85,14 +85,14 @@
         							</div>
         						</div>
         					</div>
-                            <div class="cell">
+                          <!--  <div class="cell">
                                 <div class="card">
                                     <div class="card-section">
                                         <h3>Birramisù<span class="price ">4&thinsp;€ a porzione (min. 4 porzioni)</span></h3>
                                         <p>Tiramisù con savoiardi inzuppati nella birra stout. Avvolgente e cremoso.</p>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
         			</div>
         			<div class="small-12 cell">
