--- a/menu.html
+++ b/menu.html
@@ -440,7 +440,7 @@
     							</div>
     						</div>
     					</div> -->
-                        <div class="cell">
+                       <!-- <div class="cell">
                             <div class="card">
                                 <div class="card-section">
                                     <img src="assets/img/prod/Anicetti_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Biscotti all'anice">
@@ -448,7 +448,7 @@
                                     <p>Biscotti secchi all'anice (5 pezzi).<span class=""><br><small>Allergeni: Glutine, Anidride solforosa e solfiti</small></span></p>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
