--- a/asporto.html
+++ b/asporto.html
@@ -56,7 +56,7 @@
     	<div class="grid-x grid-margin-x">
     		<div class="small-12 cell">
     			<h1 class="first-paragraph">Ordina da Asporto</h1>
-    			<p -hidden>Chiusi il lunedì e martedì.</p>
+    			<p hidden>Chiusi il lunedì e martedì.</p>
     		</div>
             <!-- <div class="small-12 cell callout primary"> 
                 <p><strong>Domenica 21 Settembre dalle ore 17.00:</strong><br>Festa di Fine Estate con concerto dei The Cadillacs.</p>
@@ -65,7 +65,7 @@
             </div> -->
     	</div>
     	<div class="grid-x grid-margin-x">
-    		<div class="small-12 medium-7 large-5 xxlarge-4 cell" hidden>
+    		<div class="small-12 medium-7 large-5 xxlarge-4 cell" -hidden>
     			<p>A che ora vuoi ritirare l'asporto? Ecco gli orari disponibili.<br><small>Puoi selezionare l'orario in ogni momento: anche durante la fase di checkout</small>.</p>
     			<div class="grid-x small-up-4 align-center extra-space">
     			    <div class="cell">
@@ -124,7 +124,7 @@
     	</div>
     </div>
     <div id="menupage-text">
-    	<div class="grid-container" hidden>
+    	<div class="grid-container" -hidden>
     		<div class="grid-x grid-margin-x">
     			<div class="small-12 large-8 cell">
     				<section class="grid-x grid-margin-x grid-margin-y" id="stuzzicare" data-magellan-target="stuzzicare">
